day-5-ingress-controller/path1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment  # Use a more descriptive name
  labels:
    app: nginx  # Add labels to the Deployment for better organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest  # Specify a tag (e.g., latest) for the image
        ports:
        - containerPort: 80
        resources:  # Add resource requests and limits for better resource management
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx
